plagiarism detection system 4

--- a/templates/complete.html
+++ b/templates/complete.html
@@ -15,28 +15,31 @@
 	<div>
 		<form id="view_graph" action="{{ url_for('complete') }}" method ="POST">
 			<h1 style="font-size:30px; color:blue; display: inline-block;">RESULT</h1>
-			<p style="font-size:15px; display: inline-block;">Code Plagiarism Checker v0.7b</p>
+			<p style="font-size:15px; display: inline-block;">Code Plagiarism Checker v0.7b &nbsp;&nbsp; {{Time}} sec</p>
 			<input  type="submit" value="show graph" style="display: inline-block;" >
 		</form>
 	</div>
 
 	<hr>
-	<p style="font-size:16px; color:blue; display: inline-block;" > STRANGE CODE &nbsp;: </P>
-
-		{% for num in er %}
-			<form id="strange_code" action="{{ url_for('show_strange_code') }}" method = "GET">
-				<input style="font-size:15; display: inline-block; background: #ffffff; board: 0px;" type="submit" name="strange_code" value= {{num}} &nbsp;>
+		<form id ="good_code" action="{{ url_for('show_good_code') }}" method = "GET">
+		<p style="font-size:15px; color:blue;"> VAILD CODE </p>
+		{%for num in good %}
+				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="good_code" value={{num}} &nbsp;>
 		{% endfor %}
+		</form>
 	<br>
-
-
+		<form id="strange_code" action="{{ url_for('show_strange_code') }}" method = "GET">
+		<p style="font-size:15px; color:blue;" > INVAILD CODE</p>
+		{% for num in er %}
+				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="strange_code" value= {{num}} &nbsp;>
+		{% endfor %}
+		</form>
+	<br>
 	
 		<form id="short_code" action="{{ url_for('show_short_code') }}" method = "GET">	
-		<p style="font-size:16px; color:blue; display: inline-block;" > SHORT CODE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : </P>
+		<p style="font-size:15px; color:blue;" > SHORT CODE</p>
 		{% for num in short %}
-			
 				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="short_code" value= {{num}} &nbsp;>
-			
 		{% endfor %}
 		</form>
 	<hr>
