--- a/templates/upload.html
+++ b/templates/upload.html
@@ -24,7 +24,7 @@
 
 		<form id="upload-form" action="{{ url_for('upload') }}" method ="POST" enctype="multipart/form-data">
 			<input type="file" name="file" >
-			<input type="submit" value="send">
+			<input type="submit" value="submit">
 		<span style="color:#C0C0C0"><p> import only zip file</p> </span>
 
 
