plagiarism detection system 5

--- a/templates/complete2.html
+++ b/templates/complete2.html
@@ -1,42 +1,22 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>걸리면 F</title>
+		<title>Title</title>
 	</head>
 
 	<style>
-		@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-		
-		body{
-			font-family:nanumgothic;
-			text-align:left;
-			margin-top: 10px;
-			margin-left: 20px;
-		}
-		
-		.showcode{
-			font-size:15; 
-			display: inline-block; 
-			background: #ffffff; 
-			border: 0px;
-		}
-		
-		.table_style{
-			margin-top:10px; 
-			margin-right:30px; 
-			font-size:15px; 
-			text-align:right
-		}
+
+
 	</style>
 
 
 	<body>
 	<div>
 		<form id="view_graph" action="{{ url_for('complete') }}" method ="POST">
-			<h1 style="font-size:30px; color:black; display: inline-block; text-shadow:4px 4px 0px #dad7d7;">RESULT</h1>
-			<p style="font-size:15px; display: inline-block;"> &nbsp;&nbsp; 걸리면 F &nbsp v1.7b &nbsp;&nbsp; {{Time}} sec</p>
-			<!--<input  type="submit" value="show graph" style="display: inline-block;" > -->
+			<h1 style="font-size:30px; color:blue; display: inline-block;">RESULT</h1>
+			<p style="font-size:15px; display: inline-block;">Code Plagiarism Checker v0.7b &nbsp;&nbsp; {{Time}} sec</p>
+			<input  type="submit" value="show graph" style="display: inline-block;" >
 		</form>
 	</div>
 
@@ -44,26 +24,31 @@
 		<form id ="good_code" action="{{ url_for('show_good_code') }}" method = "GET">
 		<p style="font-size:15px; color:blue;"> VAILD CODE </p>
 		{%for num in good %}
-				<input class="showcode" type="submit" name="good_code" value={{num}} &nbsp;>
+				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="good_code" value={{num}} &nbsp;>
 		{% endfor %}
 		</form>
 	<br>
 		<form id="strange_code" action="{{ url_for('show_strange_code') }}" method = "GET">
 		<p style="font-size:15px; color:blue;" > INVAILD CODE</p>
 		{% for num in er %}
-				<input class="showcode" type="submit" name="strange_code" value= {{num}} &nbsp;>
+				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="strange_code" value= {{num}} &nbsp;>
 		{% endfor %}
+		</form>
+	<br>
+	
+		<form id="short_code" action="{{ url_for('show_short_code') }}" method = "GET">	
+		<p style="font-size:15px; color:blue;" > SHORT CODE</p>
 		{% for num in short %}
-				<input class="showcode" type="submit" name="short_code" value= {{num}} &nbsp;>
+				<input style="font-size:15; display: inline-block; background: #ffffff; border: 0px;" type="submit" name="short_code" value= {{num}} &nbsp;>
 		{% endfor %}
 		</form>
 	<hr>
 
 	<table class= "re_table">
-	
 		<thead>
+
 			<tr>
-				<th><div style="margin-right:30px;">No.    </div></th>
+				<th><div style="margin-right:30px;">No.  </div></th>
 				<th><div style="margin-right:30px;">File1  </div></th>
 				<th><div style="margin-right:30px;">Len1   </div></th>
 				<th><div style="margin-right:30px;">File2  </div></th>
@@ -72,16 +57,16 @@
 			</tr>
 		</thead>
 		
-		
 		<tbody>
+
 			{% for num in pr %}
 				<tr>
-					<td><div class="table_style"> {{num.number}}</div></td>					
+					<td><div style="margin-top:10px; margin-right:30px; font-size:15px; text-align:right"> {{num.number}}</div></td>					
 					<form id="diff" action="{{ url_for('show_code') }}" method = "GET">					
 						<td><input style="border:0px" name="file1" type="text"  value={{num.file1}} readonly></td>
-						<td><div class="table_style"> {{num.len1}}  </div></td>
+						<td><div style="margin-top:10px; margin-right:30px; font-size:15px; text-align:right"> {{num.len1}}  </div></td>
 						<td><input style="border:0px" name="file2" type="text"  value={{num.file2}} readonly></td>
-						<td><div class="table_style"> {{num.len2}}  </div></td>
+						<td><div style="margin-top:10px; margin-right:30px; font-size:15px; text-align:right"> {{num.len2}}  </div></td>
 						<td><input style="margin-right:100px; background: #ffffff; border: 0px;" type="submit" value={{num.score}} ></td>
 					</form>
 
